# wa-agent-template

./: .gitignore  pyproject.toml  run.py
app/: main.py
app/api/: root.py  webhook.py
app/core/: config.py  startup.py
app/data/: laptop.db  laptop_sales_data.csv
app/prompts/: custom.py
app/services/: agent.py  llm.py  message.py  whatsapp.py
app/tools/: sql_search.py
app/utils/: helper.py  logger.py
